Announcements Screen | Added Shimmer while loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="menu_announcements">Announcements</string>
-    <string name="menu_professors">Professors</string>
+    <string name="menu_announcements">Ανακοινώσεις</string>
+    <string name="menu_professors">Καθηγητές</string>
+    <string name="syllabus">Πρόγραμμα Σπουδών</string>
+    <string name="lorem_ipsum">Lorem ipsum sit dolor amet.</string>
+    <string name="lorem_ipsum_2">Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. </string>
+
 </resources>
