Contact Screen | Basic Functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="professors">Καθηγητές</string>
     <string name="students">Φοιτητές</string>
     <string name="department">Το Τμήμα</string>
+    <string name="contact">Επικοινωνία</string>
 
 
     <string name="syllabus">Πρόγραμμα Σπουδών</string>
