--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,10 @@
     <string name="eclass_lessons_header">Αναζήτηση Μαθήματος E-Class</string>
     <string name="eclass">E-Class</string>
 
+    <string name="dept_research">Έρευνα</string>
+    <string name="dept_events">Δραστηριότητες</string>
+    <string name="dept_contact">Επικοινωνία</string>
+
+    <string name="snackbar_error">Παρουσιάστηκε κάποιο σφάλμα</string>
+
 </resources>
