Get Department Announcements with RSS instead of Jsoup | Retrofit, Dagger

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <string name="url_tag">URL</string>
     <string name="model">MODEL</string>
+    <string name="lesson">LESSON</string>
     <string name="menu_main">Αρχική</string>
     <string name="nav_syllabus">Μαθήματα</string>
     <string name="main_screen">Αρχική</string>
