--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
 
     <!-- About Screen -->
     <string name="about_app_text">Η εφαρμογή αυτή αναπτύχθηκε το 2022 με την επίβλεψη του κ. Ευθύμη Αλέπη, Αναπληρωτή Καθηγητή με σκοπό την εξυπηρέτηση των μελών του ΠΜΣ Πληροφορική και την προώθηση του σε υποψήφιους μεταπτυχιακούς φοιτητές.</string>
+    <string name='disclamer'>Τα εφαρμογή χρησιμοποιεί δεδομένα σε μορφή rss απο το official site της σχολής (http://cs.unipi.gr) αλλα και απο το e-class (https://gunet2.cs.unipi.gr/). Τα δεδομένα αυτά ανήκουν στο Πανεπιστήμιο Πειραιώς.</string>
 
     <!-- Announcements Screen -->
     <string name="retry">Επανάληψη</string>
