--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,11 @@
     <string name="eclass">Ανακοινώσεις</string>
     <string name="eclass_lesson_title">Eclass Lesson Title</string>
 
+    <string name="announcement_copied">Η Ανακοίνωση αντιγράφτηκε στο πρόχειρο!</string>
+    <string name="share">Κοινοποίηση</string>
+    <string name="copy">Αντιγραφή</string>
+    <string name="view_announcement">Προβολή στο Gunet2</string>
+
     <!-- Lessons Screen -->
     <string name="lesson_announcements">Ανακοινώσεις Μαθήματος</string>
     <string name="info_title">Επεξήγηση χρωμάτων</string>
@@ -100,6 +105,7 @@
     <string name="app_contact">Επικοινωνία</string>
     <string name="the_app">Εφαρμογή</string>
     <string name="secretariat">Γραμματεία</string>
+
 
 
 </resources>
