Implementation: Change app name, make login btn bigger

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">UnipiApp</string>
+    <string name="app_name">ΠΑΠΕΙ ΠΜΣ Πληροφορική</string>
 
     <!-- Drawer -->
     <string name="open">Open</string>
